feat: Video Recording - 동영상 저장 기능 추가

--- a/ios/Runner/Info.plist
+++ b/ios/Runner/Info.plist
@@ -6,6 +6,8 @@
 	<string>Need Permissions for take video!</string>
 	<key>NSMicrophoneUsageDescription</key>
 	<string>Need Permissions for take video!</string>
+	<key>NSPhotoLibraryUsageDescription</key>
+	<string>Need Permissions for save video!</string>
 	<key>CFBundleDevelopmentRegion</key>
 	<string>$(DEVELOPMENT_LANGUAGE)</string>
 	<key>CFBundleDisplayName</key>
