--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -53,6 +53,8 @@ dependencies:
 
   permission_handler: 10.2.0
 
+  image_gallery_saver_plus: "^3.0.5"
+
 dev_dependencies:
   flutter_test:
     sdk: flutter
