--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -55,6 +55,7 @@ dependencies:
 
   image_gallery_saver_plus: "^3.0.5"
   image_picker: 0.8.6+1
+  provider: 6.0.5
 
 dev_dependencies:
   flutter_test:
