--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -56,6 +56,7 @@ dependencies:
   image_gallery_saver_plus: "^3.0.5"
   image_picker: 0.8.6+1
   provider: 6.0.5
+  shared_preferences: ^2.3.5
 
 dev_dependencies:
   flutter_test:
