--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -58,6 +58,8 @@ dependencies:
   provider: 6.0.5
   shared_preferences: ^2.3.5
 
+  flutter_riverpod: ^2.1.3
+
 dev_dependencies:
   flutter_test:
     sdk: flutter
