--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -59,6 +59,10 @@ dependencies:
   shared_preferences: ^2.3.5
 
   flutter_riverpod: ^2.1.3
+  firebase_core: ^3.10.0
+  firebase_auth: ^5.4.0
+  cloud_firestore: ^5.6.1
+  firebase_storage: ^12.4.0
 
 dev_dependencies:
   flutter_test:
